<resources>
    <string name="valid_date_range">Valid date is January 1970 to December 2036</string>
    <string name="shareEvent">Share event</string>
    <string name="share_label">Share</string>
    <string name="loading_failed">Loading failed.</string>
    <string name="operation_failed">Operation failed. Please check if “Calendar Storage“ is stopped.</string>
    <string name="clear_events">Clear events</string>
    <string name="select_clear_calendars_title">Select account</string>
    <string name="clear_all_selected_events_title">All the events in selected account will be deleted.</string>
    <string name="delete_completed">Delete operation completed.</string>
    <string name="delete_certain">OK</string>
    <string name="wait_deleting_tip">Please wait while deleting...</string>
    <string name="attendees_invalid_tip">Some attendees are invalid.</string>
    <string name="unread_reminders">%d unread reminders</string>
    <string name="click_to_view_all">Click to view all</string>
    <string name="search_setting_description">Events in Calendar</string>
    <string name="lunar_radio_text">农历</string>
    <string name="gregorian_radio_text">公历</string>
    <string name="date_picker_dialog_title">设置农历时间</string>
    <string name="date_time_done">设置</string>
    <string name="date_picker_decrement_year_button">增加一年</string>
    <string name="cancel">取消</string>
    <string name="date_picker_decrement_month_button">Decrement month</string>
    <string name="date_picker_increment_month_button">Increment month</string>
    <string name="date_picker_increment_year_button">Increment year</string>
    <string name="date_picker_increment_day_button">Increment day</string>
    <string name="date_picker_decrement_day_button">Decrement day</string>
    <string name="picker_change_date">改变日期</string>
    <string name="quick_response_error_already_exist">Text already exist</string>
    <string name="quick_response_error_null">Can not be empty</string>
    <string name="preferences_alerts_vibrateWhen_summary">Vibrate for event reminder</string>
    <string name="go_to">Go to</string>
    <string name="no_event_tip">No event.</string>
    <string name="search_hint">Search calendar</string>
    <string name="noApplications">No apps can perform this action.</string>
    <string name="low_storage_save_failed">The save failed due to low storage</string>
    <string name="denied_required_permission">Permissions denied. You can change them in Settings &gt; Apps.</string>
    <string name="app_label">Calendar</string>
    <string name="what_label">What</string>
    <string name="where_label">Where</string>
    <string name="when_label">When</string>
    <string name="timezone_label">Time zone</string>
    <string name="attendees_label">Guests</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="today_at_time_fmt">Today at %s</string>
    <string name="tomorrow_at_time_fmt">Tomorrow at %s</string>
    <string name="date_time_fmt" formatted="false">%s, %s</string>
    <string name="repeats_label">Repetition</string>
    <string name="no_title_label">(No title)</string>
    <string name="calendar_refresh">Refresh</string>
    <string name="show_day_view">Show day</string>
    <string name="agenda_view">Agenda</string>
    <string name="day_view">Day</string>
    <string name="week_view">Week</string>
    <string name="month_view">Month</string>
    <string name="event_view">View event</string>
    <string name="event_create">New event</string>
    <string name="event_edit">Edit event</string>
    <string name="event_delete">Delete event</string>
    <string name="goto_today">Today</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_select_visible_calendars">Calendars to display</string>
    <string name="search">Search</string>
    <string name="hide_controls">Hide controls</string>
    <string name="show_controls">Show controls</string>
    <string name="select_visible_calendars_title">Calendars to display</string>
    <string name="synced">synced</string>
    <string name="not_synced">not synced</string>
    <string name="acct_not_synced">This account isn\'t being synced so your calendars may not be up-to-date.</string>
    <string name="accounts">Accounts &amp; sync</string>
    <string name="select_synced_calendars_title">Calendars to sync</string>
    <string name="select_synced_calendars_button">Calendars to sync</string>
    <string name="hint_what">Event name</string>
    <string name="hint_where">Location</string>
    <string name="hint_description">Description</string>
    <string name="hint_attendees">Guests</string>
    <string name="creating_event">Event created.</string>
    <string name="saving_event">Event saved.</string>
    <string name="empty_event">Empty event not created.</string>
    <string name="creating_event_with_guest">Invitations will be sent.</string>
    <string name="saving_event_with_guest">Updates will be sent.</string>
    <string name="rsvp_accepted">Responded yes.</string>
    <string name="rsvp_tentative">Responded maybe.</string>
    <string name="rsvp_declined">Responded no.</string>
    <string name="create_event_dialog_save">Save</string>
    <string name="alert_title">Calendar notifications</string>
    <string name="event_info_title">View event</string>
    <string name="event_info_title_invite">Meeting invitation</string>
    <string name="edit_event_to_label">To</string>
    <string name="edit_event_from_label">From</string>
    <string name="edit_event_all_day_label">All day</string>
    <string name="edit_event_calendar_label">Calendar</string>
    <string name="edit_event_show_all">Show all</string>
    <string name="description_label">Description</string>
    <string name="presence_label">Show me as</string>
    <string name="privacy_label">Privacy</string>
    <string name="reminders_label">Add reminder</string>
    <string name="no_syncable_calendars">No calendars</string>
    <string name="no_calendars_found">Before you can add an event, you must add at least one Calendar account to your device and make a calendar visible. Touch Add Account to add an account (if you just added an account, wait for it to finish syncing and try again). Or touch Cancel and make sure at least one calendar is visible.</string>
    <string name="create_an_account_desc">Calendar works better with a Google Account.\n\n• Access it from any web browser\n• Back up your events securely</string>
    <string name="add_account">Add account</string>
    <string name="view_event_calendar_label">Calendar:</string>
    <string name="view_event_organizer_label">Organizer:</string>
    <string name="choose_event_color_label">Choose event color</string>
    <string name="event_color_picker_dialog_title">Event Color</string>
    <string name="event_color_set_to_default">Set to default calendar color</string>
    <string name="calendar_color_picker_dialog_title">Calendar Color</string>
    <string name="calendar_square_color_picker_description">Color picker</string>
    <string name="view_event_response_label">Attending?</string>
    <string name="response_yes">Yes</string>
    <string name="response_maybe">Maybe</string>
    <string name="response_no">No</string>
    <string name="email_guests_label">Email guests</string>
    <string name="email_organizer_label">Email organizer</string>
    <string name="email_picker_label">Email with</string>
    <string name="email_subject_prefix">Re: </string>
    <string name="event_not_found">Event not found.</string>
    <string name="map_label">Map</string>
    <string name="call_label">Call</string>
    <string name="quick_response_settings">Quick responses</string>
    <string name="quick_response_settings_summary">Edit default responses when emailing guests</string>
    <string name="quick_response_settings_title">Edit quick responses</string>
    <string name="quick_response_settings_edit_title">Quick response</string>
    <string name="quick_response_dialog_title">Choose quick response</string>
    <string name="quick_response_email_failed">Failed to find an email program</string>
    <string name="quick_response_custom_msg">Write your own…</string>
    <string name="event_info_organizer">Organizer:</string>
    <string name="event_info_reminders_label">Reminders</string>
    <string name="agenda_today">TODAY, %1$s</string>
    <string name="agenda_yesterday">YESTERDAY, %1$s</string>
    <string name="agenda_tomorrow">TOMORROW, %1$s</string>
    <string name="loading">Loading…</string>
    <string name="show_older_events">Touch to view events before %1$s</string>
    <string name="show_newer_events">Touch to view events after %1$s</string>
    <string name="search_title">Search my calendars</string>
    <string name="edit_event_label">Details</string>
    <string name="edit_label">Edit</string>
    <string name="delete_label">Delete</string>
    <string name="save_label">Done</string>
    <string name="discard_label">Cancel</string>
    <string name="snooze_all_label">Snooze all</string>
    <string name="dismiss_all_label">Dismiss all</string>
    <string name="snooze_label">Snooze</string>
    <string name="does_not_repeat">One-time event</string>
    <string name="endByDate">; until %s</string>
    <string name="daily">Daily</string>
    <string name="every_weekday">Every weekday (Mon–Fri)</string>
    <string name="weekly">Weekly (every %s)</string>
    <string name="monthly_on_day_count">Monthly (every %1$s %2$s)</string>
    <string name="monthly">Monthly</string>
    <string name="yearly_plain">Yearly</string>
    <string name="monthly_on_day">Monthly (on day %s)</string>
    <string name="yearly">Yearly (on %s)</string>
    <string name="preferences_general_title">Calendar view setting</string>
    <string name="preferences_reminder_title">Notifications &amp; reminders</string>
    <string name="preferences_hide_declined_title">Hide declined events</string>
    <string name="preferences_week_start_day_title">Week starts on</string>
    <string name="preferences_week_start_day_dialog">Week starts on</string>
    <string name="preferences_week_start_day_default">-1</string>
    <string name="preferences_alerts_title">Notifications</string>
    <string name="notification_channel_settings_summary">Change sound and vibration settings</string>
    <string name="preferences_alerts_ringtone_title">Sound</string>
    <string name="preferences_alerts_popup_title">Pop-up notification</string>
    <string name="preferences_default_reminder_title">Default reminder time</string>
    <string name="preferences_default_reminder_dialog">Default reminder time</string>
    <string name="preferences_default_reminder_default">10</string>
    <string name="preferences_use_home_tz_title">Use home time zone</string>
    <string name="preferences_use_home_tz_descrip">Displays calendars and event times in your home time zone when traveling</string>
    <string name="preferences_home_tz_title">Home time zone</string>
    <string name="preferences_home_tz_default">America/Los_Angeles</string>
    <string name="preferences_show_week_num_title">Show week number</string>
    <string name="accessibility_pick_recurrence">Repeat event</string>
    <string name="accessibility_add_reminder">Add reminder</string>
    <string name="accessibility_remove_reminder">Remove reminder</string>
    <string name="accessibility_reminder_time">Reminder time</string>
    <string name="accessibility_reminder_type">Reminder type</string>
    <string name="accessibility_reminder_showmeas">Show me as</string>
    <string name="accessibility_reminder_privacy">Privacy</string>
    <string name="acessibility_cal_notification">Calendar Notification</string>
    <string name="acessibility_snooze_notification">Snooze Notification</string>
    <string name="accessibility_email_notification">Email guests</string>
</resources>