<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:icon="@drawable/today_icon"
        android:id="@+id/action_today"
        android:orderInCategory="1"
        android:title="@string/goto_today"
        android:alphabeticShortcut="t"
        android:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_menu_add_event_holo_light"
        android:id="@+id/action_create_event"
        android:orderInCategory="2"
        android:title="@string/event_create"
        android:alphabeticShortcut="n"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_menu_refresh_holo_light"
        android:id="@+id/action_refresh"
        android:orderInCategory="3"
        android:title="@string/calendar_refresh"
        android:alphabeticShortcut="r"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_menu_search_holo_light"
        android:id="@+id/action_search"
        android:orderInCategory="4"
        android:title="@string/search"
        android:alphabeticShortcut="f"
        android:imeOptions="actionSearch"
        android:showAsAction="collapseActionView"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:icon="@drawable/ic_menu_select_visible_calendars_holo_light"
        android:id="@+id/action_select_visible_calendars"
        android:orderInCategory="5"
        android:title="@string/menu_select_visible_calendars"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_delete_all_events"
        android:visible="false"
        android:orderInCategory="6"
        android:title="@string/clear_events"
        android:alphabeticShortcut="d"
        android:showAsAction="never"/>
    <item
        android:id="@+id/action_go_to"
        android:orderInCategory="7"
        android:title="@string/go_to"
        android:alphabeticShortcut="j"
        android:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_menu_settings_holo_light"
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        android:title="@string/menu_preferences"
        android:alphabeticShortcut="s"
        android:showAsAction="never"/>
</menu>
