<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/response_row"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="64dp">
        <TextView
            android:gravity="center_vertical"
            android:id="@+id/response_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_event_response_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <RadioGroup
            android:orientation="horizontal"
            android:id="@+id/response_value"
            android:paddingTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="8dp">
            <RadioButton
                android:gravity="center_vertical"
                android:id="@+id/response_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="128dp"
                android:text="@string/response_yes"
                android:layout_weight="1"
                style="@style/TextAppearance.EditEvent"/>
            <RadioButton
                android:gravity="center_vertical"
                android:id="@+id/response_maybe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="128dp"
                android:text="@string/response_maybe"
                android:layout_weight="1"
                style="@style/TextAppearance.EditEvent"/>
            <RadioButton
                android:gravity="center_vertical"
                android:id="@+id/response_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxWidth="128dp"
                android:text="@string/response_no"
                android:layout_weight="1"
                style="@style/TextAppearance.EditEvent"/>
        </RadioGroup>
        <View style="@style/EditEventSeparator"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/organizer_row"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp">
        <TextView
            android:id="@+id/organizer_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/view_event_organizer_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <TextView
            android:id="@+id/organizer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.EditEvent_Value"/>
        <View style="@style/EditEventSeparator"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/add_attendees_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/attendees_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <com.android.calendar.ChipsAddressTextView
            android:id="@+id/attendees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:hint="@string/hint_attendees"
            android:inputType="textMultiLine"
            android:imeOptions="actionNext"
            style="@style/TextAppearance.EditEvent_Value"/>
    </LinearLayout>
    <View style="@style/EditEventSeparator"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/description_row"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp">
        <EditText
            android:layout_gravity="bottom"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:hint="@string/hint_description"
            android:capitalize="sentences"
            android:inputType="textMultiLine"
            style="@style/TextAppearance.EditEvent_Value"/>
    </LinearLayout>
    <View style="@style/EditEventSeparator"/>
    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="6dp"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/repeats_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/repeats_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <Button
            android:gravity="center"
            android:id="@+id/rrule"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-7dp"
            android:text="@string/does_not_repeat"
            android:contentDescription="@string/accessibility_pick_recurrence"
            style="@style/TextAppearance.EditEvent_SpinnerButton"/>
    </LinearLayout>
    <View style="@style/EditEventSeparator"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/reminders_row"
        android:focusable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center_vertical"
            android:id="@+id/reminders_group_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:text="@string/event_info_reminders_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/reminder_items_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"/>
        <Button
            android:textSize="18sp"
            android:textColor="#ff777777"
            android:gravity="top"
            android:layout_gravity="center_vertical"
            android:id="@+id/reminder_add"
            android:background="?android:attr/selectableItemBackground"
            android:paddingBottom="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:minHeight="20dp"
            android:text="@string/reminders_label"
            android:contentDescription="@string/accessibility_add_reminder"
            android:textAllCaps="false"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/availability_row"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/presence_label"
            android:paddingRight="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/presence_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <Spinner
            android:entries="@array/availability"
            android:id="@+id/availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/presence_label"
            android:contentDescription="@string/accessibility_reminder_showmeas"
            style="@style/TextAppearance.EditEvent_Spinner"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/visibility_row"
        android:paddingBottom="6dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/privacy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/privacy_label"
            style="@style/TextAppearance.EditEvent_LabelSmall"/>
        <Spinner
            android:entries="@array/visibility"
            android:id="@+id/visibility"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:prompt="@string/privacy_label"
            android:contentDescription="@string/accessibility_reminder_privacy"
            style="@style/TextAppearance.EditEvent_Spinner"/>
    </LinearLayout>
</LinearLayout>
