<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingTop="4dp"
    android:paddingBottom="4dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="?android:attr/listPreferredItemHeight">
    <ImageView
        android:id="@+id/image"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/stat_notify_calendar"
        android:contentDescription="@string/acessibility_cal_notification"/>
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="12dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent.Title"
            android:ellipsize="end"
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
        <TextView
            android:textAppearance="@android:style/TextAppearance.StatusBar.EventContent"
            android:ellipsize="end"
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"/>
    </LinearLayout>
    <ImageButton
        android:layout_gravity="center"
        android:id="@+id/map_button"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_map"
        android:contentDescription="@string/map_label"/>
    <ImageButton
        android:layout_gravity="center"
        android:id="@+id/call_button"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_call"
        android:contentDescription="@string/call_label"/>
    <ImageButton
        android:layout_gravity="center"
        android:id="@+id/email_button"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_menu_email_holo_dark"
        android:contentDescription="@string/accessibility_email_notification"/>
    <ImageButton
        android:layout_gravity="center"
        android:id="@+id/snooze_button"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_alarm_holo_dark"
        android:contentDescription="@string/acessibility_snooze_notification"/>
    <TextView
        android:id="@+id/end_padding"
        android:paddingRight="12dp"
        android:layout_width="12dp"
        android:layout_height="match_parent"/>
</LinearLayout>
